[package]
authors = ["Mathias Svensson <mathias@seasoned.software>"]
categories = ["encoding"]
description = "Integration between hex and serde"
documentation = "http://docs.rs/hex-serde"
homepage = "https://github.com/seasoned-software/hex-serde-rs"
keywords = ["base64", "serde"]
license = "MIT/Apache-2.0"
name = "hex-serde"
readme = "README.md"
version = "0.1.0"

[dependencies]
hex = "0.4"
serde = "1"

[dev-dependencies]
serde_derive = "1"
